backend/base/service-back-end.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: app
  name: backend
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend
  sessionAffinity: None
  type: ClusterIP
