backend/base/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: backend-destination-rule
spec:
  host: backend
  subsets:
  - name: v1
    labels:
      version: v1
