backend/base/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
    - backend
  http:
  - route:
    - destination:
        host: backend
        subset: v1
        port:
          number: 8080
      weight: 100
